[metadata]
name = MIT Libraries - Dome Reports
version = 0.3
author = W. Hays
author_email =
description = Reports for content statistic of dome.mit.edu
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carlj11/domereports
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Unix Shell
    License :: MIT License
    Operating System :: OS Independent
environment = Console :: ZSH

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
#view raw
